--- a/employee_front/src/app/details-employee/details-employee.html
+++ b/employee_front/src/app/details-employee/details-employee.html
@@ -1,10 +1,28 @@
 <title> Détails </title>
 <h1 class="text-center">Détails</h1>
 
-    <br>
+    <br><br><br>
 
     <!-- afficher name / firstname / email / poste en h5 -->
+    <div class="text-center">
+        <div>
+            <h5>nom : {{ employee.name }}</h5>
+        </div>
+        <div>
+            <h5>prénom : {{ employee.firstname }}</h5>
+        </div>
+        <div>
+            <h5>poste : {{ employee.poste }}</h5>
+        </div>
+        <div>
+            <h5>email : {{ employee.email }}</h5>
+        </div>
+    <div>
+
+        <br>
+        <br>
+        <br>
 
     <button class="btn btn-warning  mx-2">Edit</button>
-    <button (click)="onClickF()" class="btn btn-danger mx-2">Delete</button>
-   <a routerLink="/employees"><button class="btn btn-secondary mx-2">Retour</button></a>
+    <a routerLink="/delete/{{employee.id}}"><button class="btn btn-danger mx-2">Delete</button></a>
+    <a routerLink=""><button class="btn btn-secondary mx-2">Retour</button></a>
