--- a/employee_front/src/app/list-employee/list-employee.html
+++ b/employee_front/src/app/list-employee/list-employee.html
@@ -17,15 +17,15 @@
     <td>{{ employee.poste }}</td>
     <td>{{ employee.email }}</td>
     <td>
-      <button class="btn btn-warning  mx-2">Edit</button>
-      <button class="btn btn-danger mx-2">Delete</button>
+      <a routerLink="/update/{{employee.id}}"><button class="btn btn-warning  mx-2">Edit</button></a>
+      <a routerLink="/delete/{{employee.id}}"><button class="btn btn-danger mx-2">Delete</button></a>
       <a routerLink="/employee/{{employee.id}}"><button class="btn btn-secondary mx-2">Details</button></a>
     </td>
   </tr>
 </table>
 
 <div class="text-center">
-  <button class="btn btn-success mx-3">Create</button>
+  <a routerLink="/create"><button class="btn btn-success mx-3">Create</button></a>
 </div>
 
 
